2007-11-26  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/speexresample/README:
	* gst/speexresample/arch.h:
	* gst/speexresample/resample.c: (resampler_basic_direct_single),
	(resampler_basic_direct_double),
	(resampler_basic_interpolate_single),
	(resampler_basic_interpolate_double),
	(speex_resampler_process_native), (speex_resampler_process_float),
	(speex_resampler_process_int),
	(speex_resampler_process_interleaved_float),
	(speex_resampler_process_interleaved_int),
	(speex_resampler_get_input_latency),
	(speex_resampler_get_output_latency):
	* gst/speexresample/speex_resampler.h:
	Update speex resampler to latest SVN. We're now down to only the
	changes noted in README again.

	* gst/speexresample/speex_resampler_wrapper.h:
	* gst/speexresample/gstspeexresample.c:
	(gst_speex_resample_push_drain), (gst_speex_resample_query):
	Adjust to API changes.

2007-11-25  Edward Hervey  <bilboed@bilboed.com>

	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_audio),
	(gst_flv_parse_tag_video):
	Output segment with proper 'stop' value, makes flvdemux 100% compatible
	with gnonlin.

2007-11-25  Stefan Kost  <ensonic@users.sf.net>

	* ext/dc1394/gstdc1394.c:
	  Set initial structure name to fix assertion, due to recent caps name
	  constraints.

2007-11-23  Zaheer Abbas Merali <zaheerabbas at merali dot org>

	patch by: Alessandro Decina

	* gst/mpegtsparse/mpegtspacketizer.c:
	* gst/mpegtsparse/mpegtspacketizer.h:
	* gst/mpegtsparse/mpegtsparse.c:
	* gst/mpegtsparse/mpegtsparse.h:
	pat-info is now a signal not a GObject property that
	gets notified.
	pat-info, pmt-info now instead of passing a GObject as
	a parameter, pass a GstStructure.
	New signals: nit-info, sdt-info, eit-info for DVB SI information
	* sys/dvb/camconditionalaccess.c:
	* sys/dvb/camconditionalaccess.h:
	* sys/dvb/camdevice.c:
	* sys/dvb/camdevice.h:
	* sys/dvb/camswclient.c:
	* sys/dvb/camswclient.h:
	* sys/dvb/camutils.c:
	* sys/dvb/camutils.h: